[package]
name = "nt-hive"
version = "0.3.0"
authors = ["Colin Finck <colin@reactos.org>"]
description = "Access keys, values, and data stored in Windows hive (registry) files"
homepage = "https://github.com/ColinFinck/nt-hive"
repository = "https://github.com/ColinFinck/nt-hive"
documentation = "https://docs.rs/nt-hive"
readme = "README.md"
edition = "2021"
rust-version = "1.61.0"
license = "GPL-2.0-or-later"
keywords = ["windows", "nt", "registry", "hive", "regf"]
categories = ["no-std", "os::windows-apis", "parser-implementations"]

[dependencies]
bitflags = "2.8.0"
displaydoc = { version = "0.2.5", default-features = false }
enumn = "0.1.14"
memoffset = "0.9.1"
zerocopy = { version = "0.8.14", features = ["derive"] }

[features]
default = ["std"]
alloc = []
std = ["alloc"]
